# goose

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  goose.yaml  mkdocs.yml  mypy.ini  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  ruff.toml  versions.json
.github/: dependabot.yml  release.yml
.github/workflows/: bump.yaml  ci.yaml  docs.yaml  goose-run.yaml  release.yaml  run.yaml  upgrade.yaml
.goose/node/: manifest.json
.goose/python/: manifest.json  requirements.txt
.goose/type-check/: manifest.json  requirements.txt
0.10/: 404.html  index.html
0.10/installation/: index.html
0.11/: 404.html
0.12/: index.html
0.12/installation/: index.html
0.14/: 404.html  index.html
0.14/installation/: index.html
0.6/: 404.html  index.html
0.6/installation/: index.html
0.8/: index.html
0.9/installation/: index.html
dev/: 404.html  index.html
dev/installation/: index.html
docs/: index.md  installation.md
hr-locks/node/: package-lock.json
hr-locks/python/: manifest.json
hr-locks/python-sep/: manifest.json  requirements.txt
hr-locks/python312/: manifest.json  requirements.txt
hr-locks/type-check/: manifest.json  requirements.txt
src/goose/: __main__.py  asyncio.py  config.py  context.py  environment.py  executable_unit.py  filter.py  manifest.py  orphan_environments.py  parallel.py  paths.py  process.py  scheduler.py  targets.py
src/goose/_utils/: pydantic.py
src/goose/backend/: _process.py  base.py  index.py  node.py  python.py  system.py
src/goose/git/: pre_commit.py  pre_push.py  shared.py  status.py
src/hr/: __main__.py  asyncio.py  config.py  context.py  environment.py  executable_unit.py  filter.py  manifest.py  orphan_environments.py  parallel.py  paths.py  scheduler.py  targets.py
src/hr/_utils/: pydantic.py
src/hr/backend/: _process.py  base.py  index.py  node.py  python.py
tests/unit/: test_config.py  test_targets.py
tests/unit/backend/: test_index.py
