[project]
name = "goose"
version = "0"
requires-python = ">3.12,<3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "pydantic",
  "PyYAML",
  "nodeenv",
  "identify",
  "typer",
  # https://typer.tiangolo.com/#optional-dependencies
  "rich",
  # https://typer.tiangolo.com/#optional-dependencies
  "shellingham",
]

[tool.pip-tools]
generate-hashes = true
strip-extras = true
upgrade = true

[tool.mypy]
python_version = 3.12
show_error_codes = true
pretty = true
files = ["src"] # tests
plugins = ["pydantic.mypy"]

ignore_missing_imports = false
no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
